refactor: convert to Helm charts with skaffold profiles
- Convert k8s manifests to Helm chart structure (Chart.yaml, values.yaml, templates/)
- Use skaffold profiles for cluster-a and cluster-b deployments
- Simplify setup-multicluster.sh to output skaffold.env for Helm templating
- Add conditional secret creation based on CREATE_SECRET env var
- Remove test-client from cluster-b (tests run only in cluster-a)
- Add .dockerignore and .gitignore for skaffold.env

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,5 +1,7 @@
 FROM golang:1.24-alpine
 
+RUN apk add --no-cache tini bash
+
 WORKDIR /app
 
 COPY go.mod go.sum ./
@@ -7,4 +9,6 @@ RUN go mod download
 
 COPY . .
 
-CMD ["sleep", "infinity"]
+ENTRYPOINT ["/sbin/tini", "--"]
+
+CMD ["bash", "-c", "sleep infinity"]
