feat: implement multi-k8s-auth-agent for credential lifecycle management
- Add agent that registers credentials with server via POST /register
- Add credential store with in-memory cache and K8s Secret persistence
- Add RBAC for server to manage credential secrets
- Update verifier to support dynamic credentials from agent
- Refactor deployment flow: cluster-b deploys first, agent retries until server is up

--- a/k8s/cluster-a/templates/configmap.yaml
+++ b/k8s/cluster-a/templates/configmap.yaml
@@ -19,3 +19,8 @@ data:
         ca_cert: "/etc/multi-k8s-auth/certs/cluster-b-ca.crt"
         token_path: "/etc/multi-k8s-auth/certs/cluster-b-token"
 
+    # Authorized agents that can register credentials
+    agents:
+      cluster-b:
+        serviceAccount: "system:serviceaccount:multi-k8s-auth:multi-k8s-auth-agent"
+
