--- a/k8s/cluster-a/templates/deployment.yaml
+++ b/k8s/cluster-a/templates/deployment.yaml
@@ -46,5 +46,10 @@ spec:
           name: multi-k8s-auth-config
       - name: cluster-certs
         secret:
-          secretName: cluster-certs
+          secretName: multi-k8s-auth
           optional: true
+          items:
+          - key: cluster-b-token
+            path: cluster-b-token
+          - key: cluster-b-ca.crt
+            path: cluster-b-ca.crt
