--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,13 +1,13 @@
 FROM golang:1.24-alpine
 
-RUN apk add --no-cache tini bash
+RUN apk add --no-cache tini bash curl
 
 WORKDIR /app
 
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
+COPY test test
 
 ENTRYPOINT ["/sbin/tini", "--"]
 
