chore: rename project to kube-federated-auth
Rename from multi-k8s-auth to kube-federated-auth across:
- Go module and imports
- Kubernetes resources (namespace, deployments, services, etc.)
- Docker image names
- Helm charts
- Documentation and scripts

--- a/k8s/cluster-a/templates/configmap.yaml
+++ b/k8s/cluster-a/templates/configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: multi-k8s-auth
-  namespace: multi-k8s-auth
+  name: kube-federated-auth
+  namespace: kube-federated-auth
 data:
   clusters.yaml: |
     clusters:
@@ -16,6 +16,6 @@ data:
       cluster-b:
         issuer: {{ .Values.cluster_b.issuer | quote }}
         api_server: {{ .Values.cluster_b.api_server | quote }}
-        ca_cert: "/etc/multi-k8s-auth/certs/cluster-b-ca.crt"
-        token_path: "/etc/multi-k8s-auth/certs/cluster-b-token"
+        ca_cert: "/etc/kube-federated-auth/certs/cluster-b-ca.crt"
+        token_path: "/etc/kube-federated-auth/certs/cluster-b-token"
 
