--- a/k8s/cluster-a/templates/service.yaml
+++ b/k8s/cluster-a/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: multi-k8s-auth
-  namespace: multi-k8s-auth
+  name: kube-federated-auth
+  namespace: kube-federated-auth
 spec:
   type: NodePort
   selector:
-    app: multi-k8s-auth
+    app: kube-federated-auth
   ports:
   - port: 80
     targetPort: 8080
