feat: implement V2 hybrid JWKS+TokenReview API
Replace hostname-based cluster routing with automatic cluster detection:
- Detect source cluster via local JWKS signature verification (no token leakage)
- Forward TokenReview to detected cluster for authoritative validation
- Add TokenReview RBAC for both local and remote clusters

Service providers now need zero code changes - just point to kube-federated-auth
endpoint instead of local API server.

--- a/k8s/cluster-a/templates/test-client.yaml
+++ b/k8s/cluster-a/templates/test-client.yaml
@@ -43,5 +43,5 @@ spec:
           sources:
           - serviceAccountToken:
               path: token
-              expirationSeconds: 600
-              audience: test-audience
+              expirationSeconds: 3600
+              audience: https://kubernetes.default.svc.cluster.local
