--- a/k8s/cluster-a/templates/rbac.yaml
+++ b/k8s/cluster-a/templates/rbac.yaml
@@ -21,3 +21,26 @@ roleRef:
   kind: Role
   name: kube-federated-auth
   apiGroup: rbac.authorization.k8s.io
+---
+# V2: ClusterRole for TokenReview API (needed for validating local cluster tokens)
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tokenreview-creator
+rules:
+- apiGroups: ["authentication.k8s.io"]
+  resources: ["tokenreviews"]
+  verbs: ["create"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: kube-federated-auth-tokenreview-creator
+subjects:
+- kind: ServiceAccount
+  name: kube-federated-auth
+  namespace: kube-federated-auth
+roleRef:
+  kind: ClusterRole
+  name: tokenreview-creator
+  apiGroup: rbac.authorization.k8s.io
