--- a/k8s/cluster-b/templates/rbac.yaml
+++ b/k8s/cluster-b/templates/rbac.yaml
@@ -18,3 +18,26 @@ roleRef:
   kind: Role
   name: token-creator
   apiGroup: rbac.authorization.k8s.io
+---
+# V2: ClusterRole for TokenReview API (needed for validating tokens from this cluster)
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tokenreview-creator
+rules:
+- apiGroups: ["authentication.k8s.io"]
+  resources: ["tokenreviews"]
+  verbs: ["create"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: kube-federated-auth-reader-tokenreview-creator
+subjects:
+- kind: ServiceAccount
+  name: kube-federated-auth-reader
+  namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: ClusterRole
+  name: tokenreview-creator
+  apiGroup: rbac.authorization.k8s.io
