feat: add version injection at build time
- Add Version variable to main.go, set via -ldflags
- Include version in /health endpoint response
- Update Dockerfile to accept VERSION build arg
- Add make image target and scripts/build-image.sh
- Update skaffold to pass IMAGE_TAG as VERSION

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,6 +16,8 @@ profiles:
     - image: kube-federated-auth
       docker:
         dockerfile: Dockerfile
+        buildArgs:
+          VERSION: "{{.IMAGE_TAG}}"
     - image: kube-federated-auth-test
       docker:
         dockerfile: Dockerfile.test
